; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/i386/extr_bsd_i386.c_thread_setsinglestep.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/i386/extr_bsd_i386.c_thread_setsinglestep.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { %struct.TYPE_6__ }
%struct.TYPE_6__ = type { i32 }
%struct.TYPE_8__ = type { i64, i32 }

@DIRTY = common dso_local global i32 0, align 4
@EFL_TF = common dso_local global i32 0, align 4
@SYSENTER_CS = common dso_local global i64 0, align 8
@SYSENTER_TF_CS = common dso_local global i64 0, align 8
@KERN_SUCCESS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @thread_setsinglestep(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_7__*, align 8
  %6 = alloca %struct.TYPE_8__*, align 8
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %7 = load i32, i32* %3, align 4
  %8 = load i32, i32* @DIRTY, align 4
  %9 = call i32 @pal_register_cache_state(i32 %7, i32 %8)
  %10 = load i32, i32* %3, align 4
  %11 = call i64 @thread_is_64bit_addr(i32 %10)
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %34

13:                                               ; preds = %2
  %14 = load i32, i32* %3, align 4
  %15 = call %struct.TYPE_7__* @USER_REGS64(i32 %14)
  store %struct.TYPE_7__* %15, %struct.TYPE_7__** %5, align 8
  %16 = load i32, i32* %4, align 4
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %18, label %25

18:                                               ; preds = %13
  %19 = load i32, i32* @EFL_TF, align 4
  %20 = load %struct.TYPE_7__*, %struct.TYPE_7__** %5, align 8
  %21 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %20, i32 0, i32 0
  %22 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = or i32 %23, %19
  store i32 %24, i32* %22, align 4
  br label %33

25:                                               ; preds = %13
  %26 = load i32, i32* @EFL_TF, align 4
  %27 = xor i32 %26, -1
  %28 = load %struct.TYPE_7__*, %struct.TYPE_7__** %5, align 8
  %29 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %28, i32 0, i32 0
  %30 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 4
  %32 = and i32 %31, %27
  store i32 %32, i32* %30, align 4
  br label %33

33:                                               ; preds = %25, %18
  br label %63

34:                                               ; preds = %2
  %35 = load i32, i32* %3, align 4
  %36 = call %struct.TYPE_8__* @USER_REGS32(i32 %35)
  store %struct.TYPE_8__* %36, %struct.TYPE_8__** %6, align 8
  %37 = load i32, i32* %4, align 4
  %38 = icmp ne i32 %37, 0
  br i1 %38, label %39, label %55

39:                                               ; preds = %34
  %40 = load i32, i32* @EFL_TF, align 4
  %41 = load %struct.TYPE_8__*, %struct.TYPE_8__** %6, align 8
  %42 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %41, i32 0, i32 1
  %43 = load i32, i32* %42, align 8
  %44 = or i32 %43, %40
  store i32 %44, i32* %42, align 8
  %45 = load %struct.TYPE_8__*, %struct.TYPE_8__** %6, align 8
  %46 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %45, i32 0, i32 0
  %47 = load i64, i64* %46, align 8
  %48 = load i64, i64* @SYSENTER_CS, align 8
  %49 = icmp eq i64 %47, %48
  br i1 %49, label %50, label %54

50:                                               ; preds = %39
  %51 = load i64, i64* @SYSENTER_TF_CS, align 8
  %52 = load %struct.TYPE_8__*, %struct.TYPE_8__** %6, align 8
  %53 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %52, i32 0, i32 0
  store i64 %51, i64* %53, align 8
  br label %54

54:                                               ; preds = %50, %39
  br label %62

55:                                               ; preds = %34
  %56 = load i32, i32* @EFL_TF, align 4
  %57 = xor i32 %56, -1
  %58 = load %struct.TYPE_8__*, %struct.TYPE_8__** %6, align 8
  %59 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %58, i32 0, i32 1
  %60 = load i32, i32* %59, align 8
  %61 = and i32 %60, %57
  store i32 %61, i32* %59, align 8
  br label %62

62:                                               ; preds = %55, %54
  br label %63

63:                                               ; preds = %62, %33
  %64 = load i32, i32* @KERN_SUCCESS, align 4
  ret i32 %64
}

declare dso_local i32 @pal_register_cache_state(i32, i32) #1

declare dso_local i64 @thread_is_64bit_addr(i32) #1

declare dso_local %struct.TYPE_7__* @USER_REGS64(i32) #1

declare dso_local %struct.TYPE_8__* @USER_REGS32(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
